--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,45 @@
+* {
+    box-sizing: border-box;
+  }
 
+  
+body{
+    font-family: Arial;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: flex-start;
+    background: linear-gradient(0deg, rgba(19,41,61,1) 0%, rgba(237,245,249,1) 63%);
+}
+
+header {
+    padding: 40px;
+    text-align: center;
+    background: #13293d;
+    color: #fff;
+    border-bottom:30px #879274;
+  }
+  
+.question{
+  font-weight: 600;
+}
+.answers {
+    margin-bottom: 20px;
+}
+#submit{
+  font-family: sans-serif;
+  font-size: 20px;
+  background-color: #297;
+  color: #fff;
+  border: 0px;
+  border-radius: 3px;
+  padding: 20px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+#submit:hover{
+  background-color: #3a8;
+}
+
+Resources1× 0.5× 0.25×Rerun
